load_balancer_cf_parameters.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: LoadBalancer with AutoScalingGroup
Parameters:
  VPCSubnets:
    Description: availability zones (subnets) in the VPC)
    Type: CommaDelimitedList
    Default: subnet-84f5e0e2,subnet-00c4204b,subnet-a15204fb
  VPCID:
    Type: String
    Description: VPC to launch the autoscaler and loadbalancer in
    Default: vpc-9a9e45e3
Resources:
  LabSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable ssh and http access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
  LabSecurityGroupALB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable http access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
  LabTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VPCID
      TargetType: instance
  LabLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      Scheme: internet-facing
      SecurityGroups: 
      - !GetAtt LabSecurityGroupALB.GroupId
      Subnets: 
        !Ref VPCSubnets
      Type: application
  LabHTTPlistener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref LabTargetGroup
      LoadBalancerArn: !Ref LabLoadBalancer
      Port: 80
      Protocol: HTTP
  LabLaunchConfig: 
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-05cd35b907b4ffe77
      SecurityGroups: 
      - !GetAtt LabSecurityGroup.GroupId
      KeyName: andre_aws_key
      InstanceType: t2.micro
      UserData:
        !Base64 |
          #!/bin/bash -xe
          yum update -y
          amazon-linux-extras install nginx1 -y
          systemctl start nginx
          systemctl enable nginx
          sed -i -e "s/Administrator/$(date -Ins|md5sum)/g" \
          /usr/share/nginx/html/index.html
  LabAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: 1
      MaxSize: 5
      DesiredCapacity: 2
      LaunchConfigurationName: !Ref LabLaunchConfig
      TargetGroupARNs:
      - !Ref LabTargetGroup
      VPCZoneIdentifier:
        !Ref VPCSubnets
# aws cloudformation create-stack --stack-name stack01 --template-body file://load_balancer_cf_parameters.yaml
# aws cloudformation delete-stack --stack-name stack01
